# comprehend-benchmark

./: .gitattributes  .gitignore  FINDINGS.md  README.md  TEST_STRATEGY.md  pyproject.toml
analysis/: compare.py  report.py
benchmarks/repo_qa/: README.md  run_tasks.py
benchmarks/swe_qa/: README.md  run_tasks.py
benchmarks/swebench_lite/: README.md  evaluate.py  run_tasks.py  sample_tasks.json
configs/: baseline.json  comprehend.json
runs/swebench_lite/baseline/: predictions.jsonl  summary.json
runs/swebench_lite/baseline/results/: astropy__astropy-12907.json  astropy__astropy-14182.json  astropy__astropy-14365.json  astropy__astropy-14995.json  astropy__astropy-6938.json  astropy__astropy-7746.json  matplotlib__matplotlib-18869.json  matplotlib__matplotlib-22711.json  matplotlib__matplotlib-22835.json  matplotlib__matplotlib-23299.json  matplotlib__matplotlib-23314.json  matplotlib__matplotlib-23476.json  matplotlib__matplotlib-23562.json  matplotlib__matplotlib-23563.json  matplotlib__matplotlib-23913.json  matplotlib__matplotlib-23964.json  matplotlib__matplotlib-23987.json  matplotlib__matplotlib-24149.json  matplotlib__matplotlib-24265.json  matplotlib__matplotlib-24334.json  matplotlib__matplotlib-24970.json  matplotlib__matplotlib-25079.json  matplotlib__matplotlib-25311.json  matplotlib__matplotlib-25332.json  matplotlib__matplotlib-25433.json  matplotlib__matplotlib-25442.json  matplotlib__matplotlib-25498.json  matplotlib__matplotlib-26011.json  matplotlib__matplotlib-26020.json  mwaskom__seaborn-2848.json  mwaskom__seaborn-3010.json  mwaskom__seaborn-3190.json  mwaskom__seaborn-3407.json  psf__requests-1963.json  psf__requests-2148.json  psf__requests-2317.json  psf__requests-2674.json  psf__requests-3362.json  psf__requests-863.json  pylint-dev__pylint-5859.json  (+21 more)
runs/swebench_lite/baseline/transcripts/: astropy__astropy-12907.jsonl  astropy__astropy-14182.jsonl  astropy__astropy-14365.jsonl  astropy__astropy-14995.jsonl  astropy__astropy-6938.jsonl  (+56 more)
runs/swebench_lite/comprehend/: predictions.jsonl  summary.json
runs/swebench_lite/evaluations/: baseline-all.json  baseline-pylint.json  baseline-seaborn.json  comprehend-all.json  comprehend-full.json  comprehend-pylint.json  comprehend-seaborn.json
runs/swebench_lite/unmapped/: -tmp-swebench-iu299bow-mwaskom--seaborn_d4f4642a-e354-43bd-b6ba-f2b7968fcdaa.jsonl  -tmp-swebench-iu299bow-pylint-dev--pylint_29dd5dd1-c54d-4f6d-85f5-5c05d0e71abd.jsonl
scripts/: harvest_transcripts.py  run_one.sh
(+183 files in other folders)
